--- a/src/main/resources/assets/petrificate/lang/en_us.json
+++ b/src/main/resources/assets/petrificate/lang/en_us.json
@@ -1,4 +1,6 @@
 {
   "item.petrificate.petrification_device": "Petrification Device",
+  "item.petrificate.petrification_device_broken": "Petrification Device Broken",
+  "item.petrificate.petrification_device_drained": "Petrification Device Drained",
   "itemGroup.petrificate": "Petrificate"
 }
