Added: - Stone Statue Entity - More Sounds - lang - Stone Statue Texture etc
Plan:
- Nitric Acid
- Petrification Mechanic (Playet Dies -> Spawns StoneStatue Entity w nbt

--- a/src/main/resources/assets/petrificate/lang/en_us.json
+++ b/src/main/resources/assets/petrificate/lang/en_us.json
@@ -2,5 +2,7 @@
   "item.petrificate.petrification_device": "Petrification Device",
   "item.petrificate.petrification_device_broken": "Petrification Device Broken",
   "item.petrificate.petrification_device_drained": "Petrification Device Drained",
-  "itemGroup.petrificate": "Petrificate"
+  "itemGroup.petrificate": "Petrificate",
+  "effect.petrificate.petrification": "Petrificaiton",
+  "entity.petrificate.stonestatue": "Stone Statue"
 }
